force-app/main/default/objects/Holder_Price_Output__c/Holder_Price_Output__c.object-meta.xml
<CustomObject>
    <label>Holder Price Output</label>
    <nameField>
        <label>Holder Price Output Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Price Outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>