force-app/main/default/objects/Holder_Price_Output__c/fields/List_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Override__c</fullName>
    <description>OVERRIDE</description>
    <label>List Price Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>