force-app/main/default/objects/Holder_Price_Output__c/fields/Price_Element__c.field-meta.xml
<CustomField>
    <fullName>Price_Element__c</fullName>
    <label>Price Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>